added email when we changed a assigned user

--- a/taskvenue/src/Languages/de.json
+++ b/taskvenue/src/Languages/de.json
@@ -236,6 +236,14 @@
   "Working time history": "Arbeitszeitverlauf",
   "Accept":"Akzeptieren",
   "This site uses cookies":"Diese Website verwendet Cookies",
-  "By using it according to your current browser settings, you agree to their use. For more information on cookies and privacy, see Terms and Conditions.":"Durch die Nutzung entsprechend Ihrer aktuellen Browsereinstellungen stimmen Sie deren Verwendung zu. Weitere Informationen zu Cookies und Datenschutz finden Sie in den Allgemeinen Geschäftsbedingungen."
+  "By using it according to your current browser settings, you agree to their use. For more information on cookies and privacy, see Terms and Conditions.":"Durch die Nutzung entsprechend Ihrer aktuellen Browsereinstellungen stimmen Sie deren Verwendung zu. Weitere Informationen zu Cookies und Datenschutz finden Sie in den Allgemeinen Geschäftsbedingungen.",
+  "Try it for free": "Probieren Sie es kostenlos aus",
+  "Check us out on Youtube": "Schau dir uns auf Youtube an",
+  "New task in TaskVenue": "Neue Aufgabe in TaskVenue",
+  "A new task in which you are tagged has been registered. Check the details at https://taskvenue.com": "Eine neue Aufgabe, in der Sie markiert sind, wurde registriert. Überprüfen Sie die Details unter https://taskvenue.com",
+  "If you are an employee then click to move to a specific task ": "Wenn Sie ein Mitarbeiter sind, klicken Sie hier, um zu einer bestimmten Aufgabe zu wechseln ",
+  "You have been assigned to a task ": "Sie wurden einer Aufgabe zugewiesen "
+
+  
 
 }
