--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -261,7 +261,9 @@
       "Try it for free":"Wypróbuj za darmo",
       "Check us out on Youtube":"Check us out on Youtube",
       "New task in TaskVenue":"New task in TaskVenue",
-      "A new task in which you are tagged has been registered. Check the details at https://taskvenue.com":"A new task in which you are tagged has been registered. Check the details at https://taskvenue.com"
+      "A new task in which you are tagged has been registered. Check the details at https://taskvenue.com":"A new task in which you are tagged has been registered. Check the details at https://taskvenue.com",
+      "If you are an employee then click to move to a specific task ":"If you are an employee then click to move to a specific task ",
+      "You have been assigned to a task ":"You have been assigned to a task "
 
 
    
