--- a/taskvenue/src/Languages/ua.json
+++ b/taskvenue/src/Languages/ua.json
@@ -257,8 +257,13 @@
 "I agree to the terms and conditions": "Я погоджуюсь з умовами та положеннями",
 "Accept":"Прийняти",
 "This site uses cookies":"Цей сайт використовує файли cookie",
-"By using it according to your current browser settings, you agree to their use. For more information on cookies and privacy, see Terms and Conditions.":"Використовуючи його відповідно до поточних налаштувань браузера, ви погоджуєтеся з їх використанням. Для отримання додаткової інформації щодо файлів cookie та конфіденційності див. Умови та положення."
-
+"By using it according to your current browser settings, you agree to their use. For more information on cookies and privacy, see Terms and Conditions.":"Використовуючи його відповідно до поточних налаштувань браузера, ви погоджуєтеся з їх використанням. Для отримання додаткової інформації щодо файлів cookie та конфіденційності див. Умови та положення.",
+"Try it for free": "Спробуйте безкоштовно",
+"Check us out on Youtube": "Перевірте нас на Youtube",
+"New task in TaskVenue": "Нове завдання в TaskVenue",
+"A new task in which you are tagged has been registered. Check the details at https://taskvenue.com": "Зареєстровано нове завдання, в якому вас відзначено. Перевірте деталі за адресою https://taskvenue.com",
+"If you are an employee then click to move to a specific task ": "Якщо ви співробітник, тоді клацніть, щоб перейти до конкретного завдання ",
+"You have been assigned to a task ": "Вам призначено завдання "
 
 
 
