added new photo

--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -175,7 +175,7 @@
       "Copyright © 2023 Task Venue - all rights reserved.":"Copyright © 2023 Task Venue - wszystkie prawa zastrzeżone",
       "About us":"O nas",
       "App":"Aplikacja",
-      "Knowledge":"Baza Wiedzy",
+      "Knowledge":"Baza wiedzy",
       "Technology":"Technologia",
       "I can't remember my password":"Nie pamiętam hasła",
       "A place for your business":"Aplikacja dla Twojego biznesu",
