--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -263,7 +263,9 @@
       "New task in TaskVenue":"New task in TaskVenue",
       "A new task in which you are tagged has been registered. Check the details at https://taskvenue.com":"A new task in which you are tagged has been registered. Check the details at https://taskvenue.com",
       "If you are an employee then click to move to a specific task ":"If you are an employee then click to move to a specific task ",
-      "You have been assigned to a task ":"You have been assigned to a task "
+      "You have been assigned to a task ":"You have been assigned to a task ",
+      "Key functionalities":"Key functionalities",
+      "Which industry?":"Which industry?"
 
 
    
