--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -263,7 +263,9 @@
       "New task in TaskVenue":"Nowe zadanie w TaskVenue",
       "A new task in which you are tagged has been registered. Check the details at https://taskvenue.com":"Zostało zarejestrowane nowe zadanie w którym jesteś oznaczony. Sprawdź szczegóły w https://taskvenue.com",
       "If you are an employee then click to move to a specific task ":"Jeśli jesteś pracownikiem to kliknij w celu przeniesienia do konkretnego zadania ",
-      "You have been assigned to a task ":"Zostałeś przydzielony do zadania "
+      "You have been assigned to a task ":"Zostałeś przydzielony do zadania ",
+      "Key functionalities":"Kluczowe Funkcjonalności",
+      "Which industry?":"Jaka braża?"
 
 
 
