added new translations

--- a/taskvenue/src/Languages/de.json
+++ b/taskvenue/src/Languages/de.json
@@ -242,7 +242,33 @@
   "New task in TaskVenue": "Neue Aufgabe in TaskVenue",
   "A new task in which you are tagged has been registered. Check the details at https://taskvenue.com": "Eine neue Aufgabe, in der Sie markiert sind, wurde registriert. Überprüfen Sie die Details unter https://taskvenue.com",
   "If you are an employee then click to move to a specific task ": "Wenn Sie ein Mitarbeiter sind, klicken Sie hier, um zu einer bestimmten Aufgabe zu wechseln ",
-  "You have been assigned to a task ": "Sie wurden einer Aufgabe zugewiesen "
+  "You have been assigned to a task ": "Sie wurden einer Aufgabe zugewiesen ",
+  "Key functionalities":"Schlüsselfunktionen",
+  "Monitoring the time and location of employees":"Überwachung der Zeit und des Standorts von Mitarbeitern",
+  "Managing places and contractors":"Verwaltung von Orten und Auftragnehmern",
+  "Accurate billing of clients":"Genaue Abrechnung von Kunden",
+  "Effective communication with employees":"Effektive Kommunikation mit Mitarbeitern",
+  "Planning and scheduling tasks":"Planung und Terminierung von Aufgaben",
+  "The application makes it possible to track the time and exact location of employees while performing tasks. This solves the problem of supervising and controlling the work of the team, and allows for effective time management.":"Die Anwendung ermöglicht es, die Zeit und den genauen Standort der Mitarbeiter während der Aufgabenausführung zu verfolgen. Dies löst das Problem der Überwachung und Kontrolle der Arbeit des Teams und ermöglicht effektives Zeitmanagement.",
+  "By recording task locations and aggregating data by contractor, the application provides tools to effectively manage clients and service locations. This allows for better planning of activities and focus on key business areas.":"Durch die Aufzeichnung von Aufgabenstandorten und die Aggregation von Daten nach Auftragnehmer stellt die Anwendung Tools zur Verfügung, um Kunden und Service-Standorte effektiv zu verwalten. Dies ermöglicht eine bessere Planung von Aktivitäten und Fokus auf wichtige Geschäftsbereiche.",
+  "With the ability to record where and when tasks were completed, the application allows customers to be billed accurately only for services actually completed. This eliminates inaccuracies in billing and builds trust between the company and customers.":"Durch die Möglichkeit, aufzuzeichnen, wo und wann Aufgaben abgeschlossen wurden, ermöglicht die Anwendung eine genaue Abrechnung von Kunden nur für tatsächlich erbrachte Dienstleistungen. Dies beseitigt Ungenauigkeiten in der Abrechnung und stärkt das Vertrauen zwischen dem Unternehmen und den Kunden.",
+  "The task dictionary allows employees to clearly understand what tasks they are supposed to complete. This eliminates misunderstandings and facilitates effective communication within the team, which is crucial for effective project implementation.":"Das Aufgabenverzeichnis ermöglicht es Mitarbeitern, klar zu verstehen, welche Aufgaben sie abschließen sollen. Dies beseitigt Missverständnisse und erleichtert die effektive Kommunikation im Team, was für die erfolgreiche Projektumsetzung entscheidend ist.",
+  "With the scheduling module, the application supports forward planning of activities. Monitoring employee absenteeism and tasks in real time allows flexible schedule adjustments, eliminating problems associated with inefficient use of resources.":"Mit dem Terminierungsmodul unterstützt die Anwendung die langfristige Planung von Aktivitäten. Die Überwachung von Mitarbeiterabsentismus und Aufgaben in Echtzeit ermöglicht flexible Terminanpassungen und beseitigt Probleme im Zusammenhang mit der ineffizienten Nutzung von Ressourcen.",
+  "Confirmation of location":"Bestätigung des Standorts",
+  "Multiplatform":"Multiplattform",
+  "Our app runs smoothly on any device, providing users with a seamless experience regardless of the type of hardware.":"Unsere App läuft reibungslos auf jedem Gerät und bietet Benutzern unabhängig von der Art der Hardware ein nahtloses Erlebnis.",
+  "Accessibility":"Barrierefreiheit",
+  "Provide access to the app to both managers, employees and customers who want to actively participate in the process.":"Geben Sie sowohl Managern, Mitarbeitern als auch Kunden, die aktiv am Prozess teilnehmen möchten, Zugang zur App.",
+  "Data centralization":"Datenzentralisierung",
+  "Centralize data collection and store all documentation in one place.":"Zentralisieren Sie die Datensammlung und speichern Sie alle Unterlagen an einem Ort.",
+  "Service industry":"Dienstleistungsbranche",
+  "Companies offering various types of services, such as cleaning, maintenance, repair, etc., can use this app to better organize their work and monitor results.":"Unternehmen, die verschiedene Arten von Dienstleistungen anbieten, wie Reinigung, Wartung, Reparatur usw., können diese App nutzen, um ihre Arbeit besser zu organisieren und Ergebnisse zu überwachen.",
+  "Real estate operation":"Immobilienbetrieb",
+  "This application can be used by property management companies to monitor and manage tasks related to building maintenance, repairs, inspections, cleaning, etc.":"Diese Anwendung kann von Immobilienverwaltungsunternehmen genutzt werden, um Aufgaben im Zusammenhang mit Gebäudewartung, Reparaturen, Inspektionen, Reinigungen usw. zu überwachen und zu verwalten.",
+  "Technical service":"Technischer Service",
+  "Companies providing maintenance services for various equipment and machinery can use this app to record equipment locations, assign maintenance tasks and track work progress.":"Unternehmen, die Wartungsdienstleistungen für verschiedene Geräte und Maschinen anbieten, können diese App nutzen, um Standorte von Geräten aufzuzeichnen, Wartungsaufgaben zuzuweisen und den Arbeitsfortschritt zu verfolgen.",
+  "Agriculture":"Landwirtschaft",
+  "In agriculture, this application can be used to manage farm work, plan and monitor tasks related to cultivation, irrigation and plant care.":"In der Landwirtschaft kann diese Anwendung genutzt werden, um landwirtschaftliche Arbeiten zu organisieren, Aufgaben im Zusammenhang mit Anbau, Bewässerung und Pflanzenpflege zu planen und zu überwachen."
 
   
 
