--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -275,7 +275,21 @@
       "With the ability to record where and when tasks were completed, the application allows customers to be billed accurately only for services actually completed. This eliminates inaccuracies in billing and builds trust between the company and customers.":"Dzięki możliwości zapisywania miejsc i czasu, w którym zadania zostały zrealizowane, aplikacja umożliwia dokładne rozliczanie klientów tylko za faktycznie zrealizowane usługi. To eliminuje nieścisłości w rozliczeniach i buduje zaufanie między firmą a klientami.",
       "The task dictionary allows employees to clearly understand what tasks they are supposed to complete. This eliminates misunderstandings and facilitates effective communication within the team, which is crucial for effective project implementation.":"Slownik z zadaniami pozwala pracownikom jasno zrozumieć, jakie zadania mają zrealizować. To eliminuje nieporozumienia i ułatwia skuteczną komunikację w zespole, co jest kluczowe dla efektywnej realizacji projektów.",
       "With the scheduling module, the application supports forward planning of activities. Monitoring employee absenteeism and tasks in real time allows flexible schedule adjustments, eliminating problems associated with inefficient use of resources.":"Dzięki modułowi harmonogramu, aplikacja wspiera planowanie działań do przodu. Monitorowanie absencji pracowników oraz zadań na bieżąco umożliwia elastyczne dostosowanie harmonogramu, co eliminuje problemy związane z nieefektywnym wykorzystaniem zasobów.",
-      "Confirmation of location":"Potwierdzenie lokalizacji"
+      "Confirmation of location":"Potwierdzenie lokalizacji",
+      "Multiplatform":"Multiplatformowość",
+      "Our app runs smoothly on any device, providing users with a seamless experience regardless of the type of hardware.":"Nasza aplikacja działa płynnie na każdym urządzeniu, zapewniając użytkownikom swobodne korzystanie niezależnie od rodzaju sprzętu.",
+      "Accessibility":"Dostępność",
+      "Provide access to the app to both managers, employees and customers who want to actively participate in the process.":"Zapewnij dostęp do aplikacji zarówno menedżerom, pracownikom, jak i klientom, którzy chcą aktywnie uczestniczyć w procesie.",
+      "Data centralization":"Centralizacja danych",
+      "Centralize data collection and store all documentation in one place.":"Centralizuj zbieranie danych i przechowuj całą dokumentację w jednym miejscu.",
+      "Service industry":"Branża usługowa",
+      "Companies offering various types of services, such as cleaning, maintenance, repair, etc., can use this app to better organize their work and monitor results.":"Firmy oferujące różnego rodzaju usługi, takie jak sprzątanie, konserwacja, naprawy itp., mogą korzystać z tej aplikacji do lepszej organizacji swojej pracy i monitorowania wyników.",
+      "Real estate operation":"Obsługa nieruchomości",
+      "This application can be used by property management companies to monitor and manage tasks related to building maintenance, repairs, inspections, cleaning, etc.":"Aplikacja ta może być wykorzystywana przez firmy zarządzające nieruchomościami do monitorowania i zarządzania zadaniami związanymi z utrzymaniem budynków, naprawami, przeglądami, czyszczeniem itp.",
+      "Technical service":"Serwis techniczny",
+      "Companies providing maintenance services for various equipment and machinery can use this app to record equipment locations, assign maintenance tasks and track work progress.":"Firmy świadczące usługi serwisowe dla różnych urządzeń i maszyn mogą korzystać z tej aplikacji do rejestrowania lokalizacji urządzeń, przypisywania zadań serwisowych i śledzenia postępów prac.",
+      "Agriculture":"Rolnictwo",
+      "In agriculture, this application can be used to manage farm work, plan and monitor tasks related to cultivation, irrigation and plant care.":"W rolnictwie aplikacja ta może być wykorzystywana do zarządzania pracami na farmach, planowania i monitorowania zadań związanych z uprawą, nawadnianiem i pielęgnacją roślin."
 
 
 
