--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -275,7 +275,24 @@
       "With the ability to record where and when tasks were completed, the application allows customers to be billed accurately only for services actually completed. This eliminates inaccuracies in billing and builds trust between the company and customers.":"With the ability to record where and when tasks were completed, the application allows accurate billing of customers only for services actually completed. This eliminates inaccuracies in billing and builds trust between the company and customers.",
       "The task dictionary allows employees to clearly understand what tasks they are supposed to complete. This eliminates misunderstandings and facilitates effective communication within the team, which is crucial for effective project implementation.":"The task dictionary allows employees to clearly understand what tasks they are supposed to complete. This eliminates misunderstandings and facilitates effective communication within the team, which is crucial for effective project implementation.",
       "With the scheduling module, the application supports forward planning of activities. Monitoring employee absenteeism and tasks in real time allows flexible schedule adjustments, eliminating problems associated with inefficient use of resources.":"With the scheduling module, the application supports forward planning of activities. Monitoring employee absenteeism and tasks in real time allows flexible schedule adjustments, eliminating problems associated with inefficient use of resources.",
-      "Confirmation of location":"Confirmation of location"
+      "Confirmation of location":"Confirmation of location",
+      "Multiplatform":"Multiplatform",
+      "Our app runs smoothly on any device, providing users with a seamless experience regardless of the type of hardware.":"Our app runs smoothly on any device, providing users with a seamless experience regardless of the type of hardware.",
+      "Accessibility":"Accessibility",
+      "Provide access to the app to both managers, employees and customers who want to actively participate in the process.":"Provide access to the app to both managers, employees and customers who want to actively participate in the process.",
+      "Data centralization":"Data centralization",
+      "Centralize data collection and store all documentation in one place.":"Centralize data collection and store all documentation in one place.",
+      "Service industry":"Service industry",
+      "Companies offering various types of services, such as cleaning, maintenance, repair, etc., can use this app to better organize their work and monitor results.":"Companies offering various types of services, such as cleaning, maintenance, repair, etc., can use this app to better organize their work and monitor results.",
+      "Real estate operation":"Real estate operation",
+      "This application can be used by property management companies to monitor and manage tasks related to building maintenance, repairs, inspections, cleaning, etc.":"This application can be used by property management companies to monitor and manage tasks related to building maintenance, repairs, inspections, cleaning, etc.",
+      "Technical service":"Technical service",
+      "Companies providing maintenance services for various equipment and machinery can use this app to record equipment locations, assign maintenance tasks and track work progress.":"Companies providing maintenance services for various equipment and machinery can use this app to record equipment locations, assign maintenance tasks and track work progress.",
+      "Agriculture":"Agriculture",
+      "In agriculture, this application can be used to manage farm work, plan and monitor tasks related to cultivation, irrigation and plant care.":"In agriculture, this application can be used to manage farm work, plan and monitor tasks related to cultivation, irrigation and plant care."
+
+
+      
 
 
    
