added confiramtion location

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -290,7 +290,8 @@
       "Companies providing maintenance services for various equipment and machinery can use this app to record equipment locations, assign maintenance tasks and track work progress.":"Companies providing maintenance services for various equipment and machinery can use this app to record equipment locations, assign maintenance tasks and track work progress.",
       "Agriculture":"Agriculture",
       "In agriculture, this application can be used to manage farm work, plan and monitor tasks related to cultivation, irrigation and plant care.":"In agriculture, this application can be used to manage farm work, plan and monitor tasks related to cultivation, irrigation and plant care.",
-      "Select venue":"Select venue"
+      "Select venue":"Select venue",
+      "Location indicated by the user":"Location indicated by the user"
 
 
       
