--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -295,7 +295,8 @@
       "Time Difference":"Time Difference",
       "No closing date":"No closing date",
       "minutes":"minutes",
-      "hours":"hours"
+      "hours":"hours",
+      "Total amount of time for closed positions":"Total amount of time for closed positions"
 
 
       
