--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -295,7 +295,8 @@
       "Time Difference":"Różnica czasu",
       "No closing date":"Brak daty zakończenia",
       "minutes":"minuty",
-      "hours":"godziny"
+      "hours":"godziny",
+      "Total amount of time for closed positions":"Całkowita suma czasu dla zamkniętych pozycji"
 
 
 
